add TID to table

--- a/wdocs/table/otable.css
+++ b/wdocs/table/otable.css
@@ -8,7 +8,7 @@ tr { font-size: 90%; }
 thead { text-align: left; }
 td.fulldate { font-size: 80%; width: 10em; }
 td.cc { width: 30px; }
-td.topic { font-size: 80%; font-family: courier; }
+td.topic, td.tid { font-size: 80%; font-family: courier; }
 td.addr { font-size: 90%; }
 td.user { font-size: 80%; }
 
