Add a battery level column to the Recorder Table.

--- a/docroot/table/otable.css
+++ b/docroot/table/otable.css
@@ -18,3 +18,7 @@ td.user { font-size: 80%; }
   padding-left: 0;
     }
 #togglers li { float: left; padding-right: 4px; }
+
+.warning {
+  color: red;
+}
