stab for CARD in user-dev/u-d.json before user/u.json 	closes #94

--- a/docroot/views/vmap.html
+++ b/docroot/views/vmap.html
@@ -207,6 +207,10 @@
 	
 	        var userdev = loc.label ? loc.label : loc.tid;
 
+		if (loc.name) {
+			userdev = loc.name;			/* override label/tid by name from CARD */
+		}
+
 	        var data = {
 	                userdev: userdev,
 	                ghash:  loc.ghash ? loc.ghash : '',
