clear devices array on reload data 	closes #107

--- a/docroot/views/vmap.html
+++ b/docroot/views/vmap.html
@@ -62,6 +62,7 @@
 			'success': function (data) {
 			     json = data['data']; 
 			     console.log("DATA = " + JSON.stringify(json));
+				devices = [];
 				for (var n = 0; n < json.length; n++) {
 					console.log(json[n]);
 					devices.push(json[n]);
