fix paths to be relative to docroot for map/, views/, and  last/

--- a/docroot/views/leafletmap.html
+++ b/docroot/views/leafletmap.html
@@ -24,10 +24,10 @@
      <script src="../static/js/jquery-migrate-1.2.1.min.js"></script>
      <script src="../static/js/moment.min.js"></script>
      <script src="../static/js/mustache.js"></script>
-     <link rel="stylesheet" href="/static/leaflet/leaflet.css"
+     <link rel="stylesheet" href="../static/leaflet/leaflet.css"
   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
   crossorigin=""/>
-<script src="/static/leaflet/leaflet.js" />
+<script src="../static/leaflet/leaflet.js" />
 
     <script>
 var map;
