remove integrity for locally stored leaflet

--- a/docroot/views/leafletmap.html
+++ b/docroot/views/leafletmap.html
@@ -24,9 +24,7 @@
      <script src="../static/js/jquery-migrate-1.2.1.min.js"></script>
      <script src="../static/js/moment.min.js"></script>
      <script src="../static/js/mustache.js"></script>
-     <link rel="stylesheet" href="../static/leaflet/leaflet.css"
-  integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-  crossorigin=""/>
+     <link rel="stylesheet" href="../static/leaflet/leaflet.css" />
 <script src="../static/leaflet/leaflet.js" />
 
     <script>
