revert to </script>

--- a/docroot/views/leafletmap.html
+++ b/docroot/views/leafletmap.html
@@ -25,7 +25,7 @@
      <script src="../static/js/moment.min.js"></script>
      <script src="../static/js/mustache.js"></script>
      <link rel="stylesheet" href="../static/leaflet/leaflet.css" />
-<script src="../static/leaflet/leaflet.js" />
+<script src="../static/leaflet/leaflet.js" ></script>
 
     <script>
 var map;
